--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -1,5 +1,13 @@
 {
   "item.mccourse.black_opal": "Black Opal",
+  "item.mccourse.chainsaw": "Chainsaw",
   "item.mccourse.raw_black_opal": "Raw Black Opal ",
-  "itemGroup.mccourse.mccourse_items_tab": "McCourseMod Items"
+  "itemGroup.mccourse.mccourse_items_tab": "McCourse Mod Items",
+  "block.mccourse.black_opal_block": "Black Opal Block",
+  "block.mccourse.raw_black_opal_block": "Raw Black Opal Block",
+  "block.mccourse.black_opal_ore": "Black Opal Ore",
+  "block.mccourse.black_opal_deepslate_ore": "Black Opal Deepslate Ore",
+  "block.mccourse.black_opal_nether_ore": "Black Opal Nether Ore",
+  "block.mccourse.black_opal_end_ore": "Black Opal End Ore"
+
 }
