Added Advanced Custom Items and black opal ores

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.mccourse.black_opal_ore": "Black Opal Ore",
   "block.mccourse.black_opal_deepslate_ore": "Black Opal Deepslate Ore",
   "block.mccourse.black_opal_nether_ore": "Black Opal Nether Ore",
-  "block.mccourse.black_opal_end_ore": "Black Opal End Ore"
+  "block.mccourse.black_opal_end_ore": "Black Opal End Ore",
+  "block.mccourse.magic_block": "Magic Block"
 
 }
