--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -9,6 +9,8 @@
   "block.mccourse.black_opal_deepslate_ore": "Black Opal Deepslate Ore",
   "block.mccourse.black_opal_nether_ore": "Black Opal Nether Ore",
   "block.mccourse.black_opal_end_ore": "Black Opal End Ore",
-  "block.mccourse.magic_block": "Magic Block"
+  "block.mccourse.magic_block": "Magic Block",
+  "block.mccourse.black_opal_stairs": "Black Opal Stairs",
+  "block.mccourse.black_opal_slab": "Black Opal Slab"
 
 }
